--- a/CorsoEnaip2018_Interfaces2WPF/MainWindow.xaml
+++ b/CorsoEnaip2018_Interfaces2WPF/MainWindow.xaml
@@ -11,6 +11,7 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
@@ -23,5 +24,7 @@
         <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Name}"/>
         <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Surname}"/>
         <TextBox Grid.Row="2" Grid.Column="1" Name="CompletNameTextBox"/>
+        <local:UserControl1 Grid.Row="3"/>
     </Grid>
+    
 </Window>
