HTML_CSS_1 proj included; MVC_1 1

--- a/CorsoEnaip2018_MVC_1/Views/Home/Index.cshtml
+++ b/CorsoEnaip2018_MVC_1/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@model int
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -31,6 +33,7 @@
 </head>
 <body>
     <h1>Tria!</h1>
+    <h2>@Model</h2>
     <div>
     @foreach(var i in Enumerable.Range(1, 2))
     {
