--- a/CorsoEnaip2018_ProjectManagement/Views/Project/Delete.cshtml
+++ b/CorsoEnaip2018_ProjectManagement/Views/Project/Delete.cshtml
@@ -1,7 +1,8 @@
-﻿@using CorsoEnaip2018_ProjectManagement.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@model Project
 
-@model Project
+@{
+  Layout = "_Layout";
+}
 
 <!DOCTYPE html>
 <html>
