--- a/CorsoEnaip2018_ProjectManagement/Views/Project/Edit.cshtml
+++ b/CorsoEnaip2018_ProjectManagement/Views/Project/Edit.cshtml
@@ -1,55 +1,68 @@
-﻿@using CorsoEnaip2018_ProjectManagement.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@{
+  Layout = "_Layout";
+}
 
 @model Project
 
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Modifica progetto</title>
-  <link rel="stylesheet" href="~/bootstrap.css" />
-</head>
-<body>
-  <div class="container" style="width: 50%;">
-    <h1>Modifica Progetto</h1>
-    <form method="post">
-      <div class="form-group">
-        <label class="control-label">Nome</label>
-        <input class="form-control" asp-for="Name" />
-      </div>
-      <div class="form-group">
-        <label class="control-label">Cliente</label>
-        <input class="form-control" asp-for="Customer" />
-      </div>
-      <div class="form-group">
-        <label class="control-label">Manager</label>
-        <input class="form-control" asp-for="Manager" />
-      </div>
-      <div class="form-group">
-        <label class="control-label">Data Inizio</label>
-        <input type="date" class="form-control" asp-for="StartDate" />
-      </div>
-      <div class="form-group">
-        <label class="control-label">Data Fine</label>
-        <input type="date" class="form-control" asp-for="EndDate" />
-      </div>
-      <div class="form-group">
-        <label class="control-label">Data Consegna</label>
-        <input type="date" class="form-control" asp-for="DeliveryDate" />
-      </div>
-      <div class="form-group">
-        <label class="control-label">Prezzo al cliente</label>
-        <input type="number" class="form-control" asp-for="Price" />
-      </div>
-      <div class="form-group">
-        <label class="control-label">Costo interno</label>
-        <input type="number" class="form-control" asp-for="Cost" />
-      </div>
-      <div class="form-group">
-        <a class="btn btn-default" href="/Project/Index">Annulla</a>
-        <input type="submit" class="btn btn-primary" value="Salva" />
-      </div>
-    </form>
+@functions{
+  // nella direttiva @functions
+  // posso creare metodi, classi, ecc.
+  public int Sum(int a, int b)
+  {
+    return a + b;
+  }
+}
+
+@{
+  // nella direttiva @{
+  // posso eseguire operazioni, creare variabili e classi,
+  // posso chiamare metodi e funzioni
+  var x = 6;
+  var y = 7;
+  var z = Sum(x, y);
+}
+
+@section styles {
+  <link rel="stylesheet" href="~/forms.css" />
+}
+
+<h1 class="text-center">Modifica Progetto</h1>
+
+<form method="post">
+  <div class="form-group">
+    <label class="control-label">Nome</label>
+    <input class="form-control" asp-for="Name" />
   </div>
-</body>
-</html>
+  <div class="form-group">
+    <label class="control-label">Cliente</label>
+    <input class="form-control" asp-for="Customer" />
+  </div>
+  <div class="form-group">
+    <label class="control-label">Manager</label>
+    <input class="form-control" asp-for="Manager" />
+  </div>
+  <div class="form-group">
+    <label class="control-label">Data Inizio</label>
+    <input type="date" class="form-control" asp-for="StartDate" />
+  </div>
+  <div class="form-group">
+    <label class="control-label">Data Fine</label>
+    <input type="date" class="form-control" asp-for="EndDate" />
+  </div>
+  <div class="form-group">
+    <label class="control-label">Data Consegna</label>
+    <input type="date" class="form-control" asp-for="DeliveryDate" />
+  </div>
+  <div class="form-group">
+    <label class="control-label">Prezzo al cliente</label>
+    <input type="number" class="form-control" asp-for="Price" />
+  </div>
+  <div class="form-group">
+    <label class="control-label">Costo interno</label>
+    <input type="number" class="form-control" asp-for="Cost" />
+  </div>
+  <div class="form-group">
+    <a class="btn btn-default" href="/Project/Index">Annulla</a>
+    <input type="submit" class="btn btn-primary" value="Salva" />
+  </div>
+</form>
