--- a/CorsoEnaip2018_SuperHeroes/Views/Home/Index.cshtml
+++ b/CorsoEnaip2018_SuperHeroes/Views/Home/Index.cshtml
@@ -2,3 +2,13 @@
   Nuovo Supereroe
 </a>
 <p>@TempData["Message"]</p>
+<ul>
+  @foreach(var sh in Model)
+  {
+      <li>
+        @sh.Name
+        <a asp-controller="Home" asp-action="Edit"
+           asp-route-id="@sh.Id">Modifica</a>
+      </li>
+  }
+</ul>
