ProjectManagement with stored procedures

--- a/CorsoEnaip2018_ProjectManagement/Views/Project/Edit.cshtml
+++ b/CorsoEnaip2018_ProjectManagement/Views/Project/Edit.cshtml
@@ -55,11 +55,11 @@
   </div>
   <div class="form-group">
     <label class="control-label">Prezzo al cliente</label>
-    <input type="number" class="form-control" asp-for="Price" />
+    <input type="number" step="0.01" class="form-control" asp-for="Price" />
   </div>
   <div class="form-group">
     <label class="control-label">Costo interno</label>
-    <input type="number" class="form-control" asp-for="Cost" />
+    <input type="number" step="0.01" class="form-control" asp-for="Cost" />
   </div>
   <div class="form-group">
     <a class="btn btn-default" href="/Project/Index">Annulla</a>
