--- a/CorsoEnaip2018_SuperHeroes/Views/SuperHero/Edit.cshtml
+++ b/CorsoEnaip2018_SuperHeroes/Views/SuperHero/Edit.cshtml
@@ -39,7 +39,7 @@
   </div>
 
   <div class="form-group">
-    <a class="btn btn-default" asp-controller="Home" asp-action="Index">
+    <a class="btn btn-default" asp-controller="SuperHero" asp-action="Index">
       Annulla
     </a>
     <input type="submit" class="btn btn-primary" value="Salva" />
