--- a/CorsoEnaip2018_SuperHeroes/Views/SuperHero/Edit.cshtml
+++ b/CorsoEnaip2018_SuperHeroes/Views/SuperHero/Edit.cshtml
@@ -4,7 +4,7 @@
 
 @model SuperHero
 
-<h1>Nuovo Supereroe</h1>
+<h1>@(Model.Id == 0 ? "Nuovo" : "Modifica") Supereroe</h1>
 
 <form method="post">
   <div class="form-group">
@@ -31,11 +31,6 @@
     <label asp-for="CanFly" class="control-label"></label>
     <input type="checkbox" asp-for="CanFly" />
     <span asp-validation-for="CanFly"></span>
-  </div>
-  <div class="form-group">
-    <label asp-for="KilledVillains" class="control-label"></label>
-    <input type="number" asp-for="KilledVillains" class="form-control" />
-    <span asp-validation-for="KilledVillains"></span>
   </div>
 
   <div class="form-group">
