--- a/CorsoEnaip2018_ProjectManagement/Views/Project/_ViewImports.cshtml
+++ b/CorsoEnaip2018_ProjectManagement/Views/Project/_ViewImports.cshtml
@@ -1,2 +1,3 @@
 ﻿@using CorsoEnaip2018_ProjectManagement.Models
+@using CorsoEnaip2018_ProjectManagement.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
