--- a/CorsoEnaip2018_ProjectManagement/Views/Project/Index.cshtml
+++ b/CorsoEnaip2018_ProjectManagement/Views/Project/Index.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model List<Project>
+@model List<ProjectRow>
 
 <h1>Lista di progetti dell'azienda</h1>
 <table class="table">
@@ -21,10 +21,10 @@
     {
       <tr>
         <td>@p.Name</td>
-        <td>@p.Customer</td>
-        <td>@p.DeliveryDate.ToString("yyyy/MM/dd")</td>
-        <td>@(p.EndDate > p.DeliveryDate ? "Scaduto" : "Ok")</td>
-        <td>@(p.Price - p.Cost) €</td>
+        <td>@p.CustomerName</td>
+        <td>@p.Delivery.ToString("yyyy/MM/dd")</td>
+        <td>@p.IsInTime</td>
+        <td>@p.Gain €</td>
         <td><a href="/Project/Edit/@(p.Id)" class="btn btn-primary">Modifica</a></td>
         <td><a href="/Project/Delete/@(p.Id)" class="btn btn-danger">Elimina</a></td>
       </tr>
