--- a/CorsoEnaip2018_AspNetCoreTest1/Views/_ViewImports.cshtml
+++ b/CorsoEnaip2018_AspNetCoreTest1/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using CorsoEnaip2018_AspNetCoreTest1
 @using CorsoEnaip2018_AspNetCoreTest1.Models
+@using System.Collections.Generic
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
