AspNetCore testing 1 - test - complete

--- a/CorsoEnaip2018_AspNetCoreTest1/Views/Home/Index.cshtml
+++ b/CorsoEnaip2018_AspNetCoreTest1/Views/Home/Index.cshtml
@@ -21,3 +21,6 @@
         }
     </tbody>
 </table>
+
+<a href="/home/index" class="btn">Button 1</a>
+<a href="/home/index" class="btn">Button 2</a>
