--- a/CorsoEnaip2018_AspNetCoreTest1/Views/Shared/_Layout.cshtml
+++ b/CorsoEnaip2018_AspNetCoreTest1/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
     </environment>
 </head>
 <body>
+    <h1>Testing ASP.NET Core!</h1>
     <div class="container body-content">
         @RenderBody()
         <hr />
